# 2D_golf

./: CMakeLists.txt  README.md  main.cpp  tastatura.txt
.github/actions/clang-tidy/: action.yml
.github/actions/cppcheck/: action.yml
.github/actions/install-linux-deps/: action.yml
.github/actions/install-packages/: action.yml
.github/actions/process-artifacts/: action.yml
.github/actions/runtime-checks/: action.yml
.github/workflows/: cmake.yml
cls/: Ball.cpp  BlackHole.cpp  Game.cpp  Hole.cpp  Level.cpp  Obstacle.cpp  Player.cpp  Sand.cpp  SandTrap.cpp  Shot.cpp  Vector2D.cpp  Wall.cpp  Water.cpp  WaterHazard.cpp  WhileHole.cpp
header/: Ball.h  BlackHole.h  Game.h  Hole.h  Level.h  Obstacle.h  Sand.h  Vector2D.h  Wall.h  Water.h  WhiteHole.h
heather/: Ball.h  Game.h  Hole.h  Level.h  Obstacle.h  Player.h  Sand.h  SandTrap.h  Shot.h  Vector2D.h  Wall.h  Water.h  WaterHazard.h
scripts/: install-sfml-deps.sh  run_cppcheck.sh
